se asigno bajas falta continuar

--- a/estilos.css
+++ b/estilos.css
@@ -67,3 +67,16 @@ header {
       width: 100%;
       height: auto;
     }
+    .btn-1{
+      background-color: #003D79;
+      border-radius: 10%;
+   
+    }
+    .btn-2{
+      background-color: #003D79;
+      border-radius: 10%;
+    }
+    .btn-3{
+      background-color: #003D79;
+      border-radius: 10%;
+    }
