--- a/estilos.css
+++ b/estilos.css
@@ -67,3 +67,13 @@ header {
       width: 100%;
       height: auto;
     }
+
+   /*  Deslizamiento de enlaces */
+   .muestra_enlaces {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+   }
+
+    .muestra_enlaces.mostrar {
+    opacity: 1;
+   }
